--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "better-scroll": "^2.5.1",
     "pinia": "^2.1.7",
     "vant": "^4.8.5",
     "vue": "^3.4.19",
